--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
     "mongoose": "^6.5.2",
     "nodemon": "^2.0.19",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "eslint": "^8.22.0",
+    "install": "^0.13.0"
   }
 }
